# getrekt

./: .clang-format  .clang-tidy  .cmake-format.json  .eslintrc.json  .gitignore  CMakeLists.txt  README.md  build.sh  index.html  nginx.sh  rectangle.cpp  vector.cpp  vector.js
include/getrekt/: rectangle.hpp  rectinator.hpp
src/: CMakeLists.txt  emscripten-registry.cpp  getrekt.js  inner-rectangle.hpp  rectangle.cpp  rectinator.cpp
